# classy

./: .gitignore  Cargo.toml  README.md  dalog  shell.nix
cache/classes/: aai551  aai627  aai628  aai646  aai672  aai695  aai800  aai900  acc200  acc215  acc311  acc312  acc351  acc352  acc385  acc421  acc431  acc510  acc535  acc555  acc585  acc620  bia500  bia600  bia610  bia650  bia652  bia654  bia656  bia658  bia660  bia662  bia664  bia667  bia668  bia670  bia672  bia674  bia676  bia678  (+2492 more)
cache/responses/: https:%%stevens.smartcatalogiq.com%en%2022-2023%academic-catalog%courses%aai-applied-artificial-intelligence%500%aai-551  https:%%stevens.smartcatalogiq.com%en%2022-2023%academic-catalog%courses%aai-applied-artificial-intelligence%600%aai-627  https:%%stevens.smartcatalogiq.com%en%2022-2023%academic-catalog%courses%aai-applied-artificial-intelligence%600%aai-628  https:%%stevens.smartcatalogiq.com%en%2022-2023%academic-catalog%courses%aai-applied-artificial-intelligence%600%aai-646  https:%%stevens.smartcatalogiq.com%en%2022-2023%academic-catalog%courses%aai-applied-artificial-intelligence%600%aai-672  https:%%stevens.smartcatalogiq.com%en%2022-2023%academic-catalog%courses%aai-applied-artificial-intelligence%600%aai-695  https:%%stevens.smartcatalogiq.com%en%2022-2023%academic-catalog%courses%aai-applied-artificial-intelligence%800%aai-800  https:%%stevens.smartcatalogiq.com%en%2022-2023%academic-catalog%courses%aai-applied-artificial-intelligence%900%aai-900  (+2523 more)
src/: \  catalog.rs  class.rs  courses.json  get_classes.rs  get_courses.rs  main.rs  main.rs.bak  traits.rs
(+2534 files in other folders)
