[package]
name = "stevens_course_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.13.0"
url = { version = "2", features = ["serde"] }
serde_json = "1.0"
serde = "1"
anyhow = "1"
regex = "1"
indicatif = "0.17"
serenity = { default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3.28"
