[package]
name = "stevens_course_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.18"
scraper = "0.13.0"
serde_json = "1.0.99"
serde = "1.0.164"
anyhow = "1.0.71"
regex = "1.8.4"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "builder"] }
tokio = { version = "1.29.0", features = ["full"] }
futures = "0.3.28"
thiserror = "1.0.40"
rand = "0.8.5"
tantivy = "0.21.0"
